[*] rest mapping changed [*] api spec updated
